--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="author" content="CARLOS ANDRES ACOSTA ACEVEDO">
     <meta name="keywords" content="ovi,html,css"/>
     <link rel="stylesheet" href="estilos/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/scripts.js"></script>
-    <title>Ovi Web</title>
+    <script src="js/modernizr-custom.js"></script>
+    <script src="js/prefixfree.min.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <link rel="stylesheet" href="estilos/normalize.css">
+    <title>Seguridad Informatica</title>
 </head>
 <!--Aqui inicie la estrutura de la pagina web-->
 <body>
