--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           
         <section class="twiter" id="idtwiter">
 
-            <a class="twitter-timeline" data-lang="es" data-width="300" data-height="850" data-theme="light" data-link-color="#FAB81E" href="https://twitter.com/UniversidadUNAD">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-lang="es" data-width="100%" data-height="850" data-theme="light" data-link-color="#FAB81E" href="https://twitter.com/UniversidadUNAD">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
 
         <section>
