--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                           <img src="img/logoUniversidad2.jpg" alt="">
                         </a>
                         <div id="div-titulo">
-                        <H2>Bienvenido al OVI de</H2>
-                        <h1>Seguridad Informática</h1>
+                        <H1>Bienvenido al OVI de</H1>
+                        <h2>Seguridad Informática</h2>
                         
                         </div>
-                        <nav class="navegacion">
+                        <nav class="navegacion" id="nav">
                             <ul>
                                 <li><a href="index.html">Inicio</a></li>
                                 <li><a href="index.html">Lecturas</a>
