Creacion de nuevas paginas
Creacion de las paginas para Multimedia, Actividades y autor.

--- a/recomendaciones.html
+++ b/recomendaciones.html
@@ -48,7 +48,7 @@
 
         <section class="recomendaciones" id="idrecomendaciones">
                         
-            <h5>Pautas Y Recomendaciones de Seguridad Informatica<br></h5>
+            <h5>Pautas y Recomendaciones de Seguridad Informática<br></h5>
 
             <h3>1.	Mantén actualizados los programas</h3>
                 <p>      
