--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <a href="index.html" id="logo">
-        <img src="img/logoUniversidad2.jpg" alt="" />
+        <img src="img/logoUniversidad2.jpg">
       </a>
       <div id="div-titulo">
         <h1>Bienvenido al OVI de</h1>
